修改退货样式

--- a/src/component/order/order.less
+++ b/src/component/order/order.less
@@ -92,7 +92,7 @@
           width: 150px;
           height: 150px;
           background-repeat: no-repeat;
-          background-size: cover;
+          background-size: 100%;
           background-position: center center;
           background-image: url(//net.huanmusic.com/scanbar-c/v1/pic_nopicture.png);
           border-radius: 10px;
