--- a/src/pages/order/index.less
+++ b/src/pages/order/index.less
@@ -491,7 +491,9 @@
     }
   }
 }
-
+.h5-button-refund {
+  margin: 0 !important;
+}
 .layout-header__title {
   text-align: center !important;
   padding-right: 0px !important;
