--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -53,7 +53,7 @@
 
 .bg {
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 100%;
   background-position: center center;
 }
 
