--- a/src/component/product/product.less
+++ b/src/component/product/product.less
@@ -91,7 +91,7 @@
         width: 100%;
         height: 100%;
         background-repeat: no-repeat;
-        background-size: cover;
+        background-size: 100%;
         background-position: center center;
 
       }
