--- a/src/pages/user/index.less
+++ b/src/pages/user/index.less
@@ -190,12 +190,26 @@ page {
       height: 90px;
     }
 
+    &-bannerEmpty {
+      width: 692px;
+      height: 176px;
+      margin: 25px 0px 5px 0px;
+    }
     &-banner {
+      width: 692px;
+      height: 215px;
+      margin: 25px 0px 5px 0px;
+    }
+    &-bannerEmptyH5 {
       width: 692px;
       height: 177px;
       margin: 25px 0px 5px 0px;
     }
-
+    &-bannerH5 {
+      width: 692px;
+      height: 212px;
+      margin: 25px 0px 5px 0px;
+    }
     &-scrollview {
       display: block;
       background-color: #F2F2F2;
