新增使用积分抵扣功能

--- a/src/component/product/product.less
+++ b/src/component/product/product.less
@@ -226,7 +226,13 @@
       color: @product-price-color;
       font-weight: bold;
     }
-
+    &-grayT {
+      font-size: 24px;
+      margin-left: 26px;
+    }
+    &-gray {
+      font-size: 24px;
+    }
     &-discount {
       font-size: 24px;
       color: #666666;
