--- a/src/pages/login/component/index.less
+++ b/src/pages/login/component/index.less
@@ -10,7 +10,7 @@
   .login_container_bg{
     width:100%;
     height: 352px;
-    background-image: url('../../../assets/bg_registered.png');
+    background-image: url('//net.huanmusic.com/scanbar-c/bg_registered.png');
     background-repeat: no-repeat;
     background-size: 100% 100%;
     position: relative;
@@ -24,7 +24,7 @@
     .login_container_bg_logo{
       width:180px;
       height:180px;
-      background-image: url('../../../assets/icon_shop.png');
+      background-image: url('//net.huanmusic.com/scanbar-c/icon_shop.png');
       background-repeat: no-repeat;
       background-size: 100% 100%;
       position: absolute;
