--- a/src/pages/style/product.less
+++ b/src/pages/style/product.less
@@ -896,6 +896,11 @@
     &-voucher {
       color: #333333;
       font-size: 30px;
+      &-span {
+        color: #999999;
+        font-size: 22px;
+        margin: 0px 9px;
+      }
     }
 
     &-total {
