积分修改，页面适配

--- a/src/pages/product/component/index.less
+++ b/src/pages/product/component/index.less
@@ -6,7 +6,12 @@
 @swiper-height: 650px;
 
 .@{prefix} {
-
+  &-share {
+    width: 194px;
+    height: 54px;
+    background-color: #fff;
+    .background-image('//net.huanmusic.com/scanbar-c/icon_details_share.png')
+  }
   &-swiper {
     width: @swiper-width;
     height: @swiper-height;
