--- a/src/pages/style/order.less
+++ b/src/pages/style/order.less
@@ -30,6 +30,12 @@
     margin-top: 22px;
     &-card {
       width: 90%;
+      .component-form {
+        .at-list__item {
+          padding-left: 10px !important;
+        }
+      }
+
     }
   }
   &-search {
