--- a/src/component/card/style.scss
+++ b/src/component/card/style.scss
@@ -34,7 +34,7 @@ $at-list-item-horizontal-padding: 24px;
     color: $at-list-text-color;
     font-size: $font-size-lg;
     line-height: $line-height-zh;
-
+    padding-left: 10px;
     // @include hairline-bottom-relative($left: $spacing-h-lg);
     &::after {
       @include hairline-common();
