--- a/src/pages/user/index.less
+++ b/src/pages/user/index.less
@@ -145,7 +145,7 @@ page {
       font-size: 24px;
       position: relative;
       // min-width: 200px;
-      // width: 33%;
+      width: 33.3%;
 
       &-discount {
         min-width: 160px;
