--- a/src/component/product/product.less
+++ b/src/component/product/product.less
@@ -10,7 +10,7 @@
 @product-title-font: 30px;
 @product-title-color: #525252;
 @product-price-font: 30px;
-@product-price-color: #FC4E44;
+@product-price-color: #fc4e44;
 @product-normal-color: #999999;
 
 @product-padding: 10px;
@@ -40,7 +40,7 @@
     display: flex;
     flex-direction: row;
   }
-  
+
   &-full {
     .padding(30px, l);
   }
@@ -61,15 +61,15 @@
       position: absolute;
       top: 50%;
       transform: translateY(-50%);
-      width:34px;
-      height:34px;
+      width: 34px;
+      height: 34px;
       .bg;
     }
     &-normal {
-      background-image: url('//net.huanmusic.com/scanbar-c/bt_unavailable.png');
+      background-image: url("//net.huanmusic.com/scanbar-c/bt_unavailable.png");
     }
     &-active {
-      background-image: url('//net.huanmusic.com/scanbar-c/bt_cart_selected.png');
+      background-image: url("//net.huanmusic.com/scanbar-c/bt_cart_selected.png");
     }
   }
 
@@ -93,7 +93,6 @@
         background-repeat: no-repeat;
         background-size: 100%;
         background-position: center center;
-
       }
 
       &-empty {
@@ -104,7 +103,7 @@
         bottom: 0;
         width: @product-image-size;
         height: @product-image-size;
-        background: rgba(0, 0, 0, .5);
+        background: rgba(0, 0, 0, 0.5);
         // opacity: 0.5;
         .flex(center, center);
         font-size: 30px;
@@ -164,6 +163,7 @@
   }
 
   &-tips {
+    position: relative;
     .margin(9px, t);
     font-size: 22px;
     height: 22px;
@@ -176,6 +176,11 @@
     line-clamp: 1;
     -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
+    &-discount {
+      position: absolute;
+      right: 10px;
+      top: 0;
+    }
   }
 
   &-activity {
@@ -183,14 +188,14 @@
   }
 
   &-discount {
-    .item(rgba(255, 240, 226, 1), #FF893B);
+    .item(rgba(255, 240, 226, 1), #ff893b);
     &-text {
       .item-text;
     }
   }
 
   &-batchDiscount {
-    .item(rgba(255,235,235,1), #FC4E44);
+    .item(rgba(255, 235, 235, 1), #fc4e44);
     margin-right: 12px;
     &-text {
       .item-text;
@@ -201,7 +206,7 @@
     position: absolute;
     right: 0;
     bottom: 13px;
-    .item(rgba(255,240,226,1), #FF893B);
+    .item(rgba(255, 240, 226, 1), #ff893b);
     margin: 0;
     border-radius: 13px 0 0 13px;
     &-text {
@@ -234,7 +239,7 @@
     }
 
     &-pos {
-      .margin(-4px, l)
+      .margin(-4px, l);
     }
 
     &-origin {
@@ -307,8 +312,8 @@
 
     &-delete {
       background-color: transparent;
-      border: #2A86FC solid 2px;
-      color: #2A86FC;
+      border: #2a86fc solid 2px;
+      color: #2a86fc;
       margin-right: 30px;
       font-weight: normal;
     }
@@ -349,11 +354,11 @@
       height: 50px;
 
       &-reduce {
-        .background-image('//net.huanmusic.com/scanbar-c/bt_shanchu_l.png');
+        .background-image("//net.huanmusic.com/scanbar-c/bt_shanchu_l.png");
       }
 
       &-add {
-        .background-image('//net.huanmusic.com/scanbar-c/bt_increase_l.png');
+        .background-image("//net.huanmusic.com/scanbar-c/bt_increase_l.png");
       }
     }
   }
