--- a/src/pages/style/member.less
+++ b/src/pages/style/member.less
@@ -291,9 +291,11 @@
         }
         &-input {
           font-size: @member-search-input-font-size;
-          color: @base-font-color;
+          color: #CCCCCC;
           // width: 520px - 50px - @member-scan-icon-size;
           display: flex;
+          height: 60px;
+          line-height: 60px;
           flex: 1;
           .margin(32px, r);
           &-holder {
