--- a/src/pages/product/component/index.less
+++ b/src/pages/product/component/index.less
@@ -48,8 +48,8 @@
     &-tip {
       width: 100%;
       font-size:24px;
-      line-height: 24px;
-      height: 24px;
+      line-height: 30px;
+      height: 30px;
       font-weight:500;
       color:rgba(153,153,153,1);
       .margin(10px, t);
@@ -64,7 +64,7 @@
     &-inventory {
       .act-item(#FC4E44);
       .margin(23px, t);
-      border: 1px #FC4E44 solid;
+      border: 2px #FC4E44 solid;
     }
 
     &-price {
@@ -95,6 +95,9 @@
         font-weight:500;
         color:rgba(179,179,179,1);
         .margin(20px, r);
+        &-txt {
+          padding-left: 14px;
+        }
       }
       &-boxs {
         display: flex;
@@ -107,16 +110,20 @@
       &-discount {
         .act-item-bg(#FF893B, rgba(255,240,226,1));
         .margin(14px, r);
+        padding-top: 16px;
+        padding-bottom: 15px;
+        font-size: 20px;
       }
       &-reduce {
         .act-item-bg(#FC4E44, rgba(255,235,235,1));
         .margin(14px, r);
+        font-size: 20px;
       }
       &-bor {
         .margin(16px, b);
       }
       &-text {
-        font-size:24px;
+        font-size:20px;
         font-weight:500;
         color:rgba(51,51,51,1);
       }
@@ -127,6 +134,7 @@
     .margin(20px, t);
     display: flex;
     flex-direction: column;
+    padding-bottom: 5px;
     &-item {
       display: flex;
       flex-direction: row;
@@ -136,13 +144,13 @@
       font-size:30px;
       font-weight:500;
       color:rgba(102,102,102,1);
-      .margin(34px, b);
+      .margin(20px, b);
     }
     &-subtitle {
       font-size:24px;
       font-weight:500;
       color:rgba(179,179,179,1);
-      .margin(24px, r)
+      .margin(14px, r)
     }
     &-text {
       font-size:24px;
