--- a/src/component/order/order.less
+++ b/src/component/order/order.less
@@ -13,10 +13,9 @@
 
   &-card {
     position: relative;
-    width: 90%;
     height: 448px;
     background-color: #fff;
-    margin: auto;
+    margin: 30px;
     margin-top: 30px;
     border-radius: 10px;
     padding-top: 34px;
@@ -55,7 +54,9 @@
       &-text {
         flex-direction: column;
         margin-left: 18px;
-
+        &-shop-h5 {
+          margin-bottom: -5px;
+        }
         &-shop {
           color: #333333;
           font-size: 30px;
@@ -92,7 +93,7 @@
           width: 150px;
           height: 150px;
           background-repeat: no-repeat;
-          background-size: 100%;
+          background-size: 100% 100%;
           background-position: center center;
           background-image: url(//net.huanmusic.com/scanbar-c/v1/pic_nopicture.png);
           border-radius: 10px;
@@ -166,11 +167,13 @@
       &-again {
         border: #999999 solid 2px;
         color: #666666;
+        padding-top: 5px;
       }
 
       &-pay {
         border: #2A86FC solid 2px;
         color: #2A86FC;
+        padding-top: 5px;
       }
     }
   }
