--- a/src/pages/cart/index.less
+++ b/src/pages/cart/index.less
@@ -32,7 +32,7 @@
     .margin(15px, r);
     border-radius: 10px;
     font-size: 20px;
-
+    padding-top: 4px;
     &-red {
       color: rgba(252, 78, 68, 1);
       background: rgba(255, 235, 235, 1);
