--- a/src/pages/order/component/index.less
+++ b/src/pages/order/component/index.less
@@ -10,8 +10,7 @@
     &-pad {
       position: relative;
       z-index: 100;
-      width: 90%;
-      margin: auto;
+      margin: 0 30px;
     }
 
     &-tabs {
@@ -28,7 +27,7 @@
         bottom: 0;
         left: 0;
         right: 0;
-        height: 66px;
+        height: 74px;
         background: rgba(225, 238, 255, 1);
       }
     }
@@ -48,10 +47,14 @@
 
         &-left {
           background-image: url(//net.huanmusic.com/scanbar-c/tab_left.png);
+          background-size: 100% 100%;
+          background-repeat: no-repeat;
         }
 
         &-right {
           background-image: url(//net.huanmusic.com/scanbar-c/tab_right.png);
+          background-size: 100% 100%;
+          background-repeat: no-repeat;
         }
       }
 
@@ -59,7 +62,7 @@
         font-size: 26px;
         font-weight: 500;
         color: rgba(153, 153, 153, 1);
-        height: 66px;
+        height: 74px;
         background: rgba(225, 238, 255, 1);
         border-radius: 10px 10px 0 0;
       }
@@ -99,6 +102,8 @@
           font-size: 30px;
           font-weight: 500;
           color: rgba(42, 134, 252, 1);
+          line-height: 82px;
+          margin-top: 5px;
         }
       }
 
