--- a/src/pages/product/index.less
+++ b/src/pages/product/index.less
@@ -6,7 +6,7 @@
 
   &-header {
     width: 750px;
-    height: 120px;
+    height: 110px;
     .flex(center, center, row);
     z-index: 99;
     &-container {
@@ -102,12 +102,11 @@
 
     &-title {
       // width: 100%;
-      height: 76px;
+      height: 56px;
       .flex(center, space-between, row);
       color: #999999;
       font-size: 24px;
     }
-
     &-del {
       width: 76px;
       height: 76px;
@@ -125,18 +124,21 @@
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
+      &-item-h5 {
+        line-height: 40px !important;
+      }
 
       &-item {
-        height: 60px;
+        height: 55px;
         padding: 10px 39px;
         .flex(center, center, row);
         color: #808080;
         font-size: 28px;
         line-height: 28px;
-        border: #cccccc solid 1px;
+        border: #cccccc solid 2px;
         border-radius: 20px;
+        margin: 10px 0px;
         margin-right: 20px;
-        margin-bottom: 23px;
         text-align: center;
         display: -webkit-box;
         overflow: hidden;
