--- a/src/component/card/form.card.less
+++ b/src/component/card/form.card.less
@@ -5,10 +5,14 @@
 
 .@{form-prefix} {
   .theme-card;
+  &-remarkTxt {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+    overflow: hidden;
+  }
   &-wrap {
-    width: 90%;
-    margin: 0 auto;
-    margin-top: 22px;
+    margin: 22px 30px 0px !important;
   }
   &-buttons {
     .flex(center, center);
