--- a/src/component/product/product.less
+++ b/src/component/product/product.less
@@ -62,9 +62,11 @@
       position: absolute;
       top: 50%;
       transform: translateY(-50%);
-      width:34px;
+      width:35px;
       height:34px;
       .bg;
+      background-repeat: no-repeat;
+      background-size: 100% 100%;
     }
     &-normal {
       background-image: url('//net.huanmusic.com/scanbar-c/bt_unavailable.png');
@@ -95,7 +97,7 @@
         width: 100%;
         height: 100%;
         background-repeat: no-repeat;
-        background-size: 100%;
+        background-size: 100% 100%;
         background-position: center center;
 
       }
@@ -163,21 +165,26 @@
     -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
     &-h5 {
-      white-space: nowrap;
-      text-overflow: ellipsis;
-      overflow: hidden;
-      width: 370px;
+      width: 100%;
       display: block;
       line-height: 35px;
-      height: 35px;
+      height: 33px;
+      display: -webkit-box !important;
+      -webkit-box-orient: vertical !important;
+      -webkit-line-clamp: 1 !important;
+      overflow: hidden !important;
     }
     &-manage {
       width: 100%;
     }
   }
-
+  &-titleSearch-h5 {
+    width: 88% !important;
+  }
+  &-tipsSearch-h5 {
+    width: 88% !important;
+  }
   &-tips {
-    .margin(9px, t);
     font-size: 22px;
     height: 22px;
     line-height: 22px;
@@ -191,12 +198,14 @@
     -webkit-box-orient: vertical;
   }
   &-tips-h5 {
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    height: 28px;
+    display: -webkit-box !important;
+    -webkit-box-orient: vertical !important;
+    -webkit-line-clamp: 1 !important;
+    overflow: hidden !important;
+    height: 26px;
     line-height: 28px;
     overflow: hidden;
-    width: 370px;
+    width: 100%;
     display: block;
   }
   &-activity {
@@ -205,8 +214,10 @@
 
   &-discount {
     .item(rgba(255, 240, 226, 1), #FF893B);
+    height: 30px;
     &-text {
       .item-text;
+      padding-top: 5px;
     }
   }
 
@@ -276,7 +287,9 @@
       color: rgba(179, 179, 179, 1);
     }
   }
-
+  &-normal-h5 {
+    height: 40px !important;
+  }
   &-normal {
     // .margin(18px, t);
     font-size: 24px;
@@ -321,7 +334,7 @@
 
   &-stepper {
     position: absolute;
-    right: 0px;
+    right: -15px;
     bottom: 0;
 
     &-empty {
@@ -334,7 +347,8 @@
       line-height: 30px;
       font-weight: 500;
       color: rgba(255, 255, 255, 1);
-      margin-right: 12px;
+      margin-right: 15px;
+      padding-top: 5px;
     }
 
     &-delete {
