--- a/src/component/swiperAction/index.less
+++ b/src/component/swiperAction/index.less
@@ -22,6 +22,7 @@
   left: 0;
   top: 0;
   width: 100%;
+  border: none;
   height: auto;
   background:rgba(255,255,255,1);
   border-bottom: 1px solid rgba(242,242,242,1);
