--- a/src/pages/user/index.less
+++ b/src/pages/user/index.less
@@ -23,7 +23,7 @@ page {
 
   &-container {
     .flex(center, flex-start, column);
-    .padding(30px, lr);
+    .padding(25px, lr);
     height: 100%;
     width: 100%;
     background-color: #F2F2F2;
@@ -46,6 +46,9 @@ page {
     &-box {
       display: flex;
       flex-direction: column;
+      height: 140px;
+      line-height: 70px;
+      padding-top: 25px;
       .margin(36px, l);
     }
 
@@ -57,6 +60,7 @@ page {
       // display: flex;
       // flex-direction: row;
       // align-items: center;
+      padding-top: 8px;
       .flex(center, center, row);
 
       &-get {
@@ -92,6 +96,7 @@ page {
       border-radius: 10px;
       background-color: #fff;
       width: 100%;
+      height: 96px;
       margin-bottom: 22px;
       display: flex;
       flex-direction: row;
@@ -154,22 +159,24 @@ page {
       &-number {
         font-weight: bold;
         font-size: 36px;
+        margin-bottom: -5px;
       }
 
       &-pop {
         position: absolute;
         top: 10px;
-        right: 0px;
+        right: 10%;
         transform: translate(50%, 0);
         margin-left: 10px;
-        min-width: 96px;
-        padding: 0 15px;
+        min-width: 108px;
+        padding: 0 5px;
         white-space: nowrap;
         height: 28px;
-        .bg;
         background-image: url(//net.huanmusic.com/scanbar-c/v2/bg_coupon_prompt.png);
+        .bg;
         color: #FF893B;
         font-size: 20px;
+        padding-top: 2px;
         .flex(center, center);
       }
     }
@@ -201,12 +208,12 @@ page {
       margin: 25px 0px 5px 0px;
     }
     &-bannerEmptyH5 {
-      width: 692px;
+      width: 90%;
       height: 177px;
       margin: 25px 0px 5px 0px;
     }
     &-bannerH5 {
-      width: 692px;
+      width: 90%;
       height: 212px;
       margin: 25px 0px 5px 0px;
     }
@@ -228,7 +235,6 @@ page {
       }
 
       &-item {
-        display: flex;
         justify-content: center;
         width: 100%;
       }
@@ -266,7 +272,7 @@ page {
       &-inner {
         position: relative;
         width: 100%;
-        padding-top: 75px;
+        padding-top: 95px;
       }
 
     }
@@ -286,13 +292,14 @@ page {
           position: absolute;
           top: 0;
           left: 0;
+          margin-top: 20px;
         }
       }
     }
     &-user-box {
       background-color: #fff;
       border-radius: 10px;
-      padding: 93px 0 63px;
+      padding: 70px 0 63px;
       text-align: center;
       margin-bottom: 74px;
       display: flex;
@@ -301,23 +308,26 @@ page {
     }
     &-user-name {
       font-size: 36px;
-      line-height: 1em;
+      height: 25px;
+      line-height: 25px;
       position: relative;
       display: inline-block;
+      margin-top: 40px;
       &-user-name-outter {
         display: flex;
         justify-content: center;
+   
       }
     }
     &-user-member {
       position: absolute;
       left: calc(~'100% + 10px');
-      top: 2px;
+      top: -10px;
       height: 32px;
       display: flex;
       flex-direction: row;
       align-items: center;
-      border:1px solid rgba(216,174,109,1);
+      border:2px solid rgba(216,174,109,1);
       border-radius:10px;
       padding: 0 10px;
       font-size:18px;
@@ -327,6 +337,7 @@ page {
     &-user-phone {
       font-size:30px;
       color:rgba(102,102,102,1);
+      margin-top: -10px;
     }
     &-bar-code {
       margin: 60px 0;
