--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -54,7 +54,7 @@
 
 .bg {
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: 100% 100%;
   background-position: center center;
 }
 
@@ -247,7 +247,7 @@
 }
 
 .theme-card {
-  border-radius: 20px;
+  border-radius: 10px;
   background-color: #ffffff;
 }
 
