--- a/src/component/cart/cart.less
+++ b/src/component/cart/cart.less
@@ -1,14 +1,14 @@
 @import "../../styles/theme.less";
 
 @cart-prefix: cart;
-@cart-height: 128px;        // 购物车背景图高度
-@cart-button-font: 36px;    // 结算按钮字体大小
-@cart-button-width: 190px;  // 结算按钮大小
-@cart-icon-size: 136px;     // 购物车icon大小
+@cart-height: 110px; // 购物车背景图高度
+@cart-button-font: 36px; // 结算按钮字体大小
+@cart-button-width: 200px; // 结算按钮大小
+@cart-icon-size: 80px; // 购物车icon大小
 @product-border-color: #f9f9f9;
 @product-name-color: #4f4f4f;
 @product-price-font: 32px;
-@product-price-color: #FC4E44;
+@product-price-color: #fc4e44;
 @cart-list-header-font-color: #808080; // 购物车列表头部字体颜色
 @product-normal-color: #cccccc;
 @cart-scan-size: 162px;
@@ -19,23 +19,11 @@
   z-index: 999;
   &-bg {
     position: relative;
-    .padding(@cart-button-width + 40px, r);
     width: 750px;
     height: @cart-height;
-    .background-image('//net.huanmusic.com/weapp/bmg_bottom_close.png');
+    background-color: #fff;
     &-suspension {
       .padding(414px, r);
-    }
-  }
-  &-scan {
-    position: absolute;
-    bottom: 60px;
-    width: @cart-scan-size;
-    height: @cart-scan-size;
-    left: (750px - @cart-scan-size) / 2;
-    &-image {
-      width: 100%;
-      height: 100%;
     }
   }
   &-right {
@@ -47,32 +35,13 @@
     .flex(center, center, column);
     color: #ffffff;
     font-size: @cart-button-font;
-    &-suspension {
-      width: 414px;
-      flex-direction: row;
-      &-text {
-        font-size: 36px;
-        font-weight: bold;
-      }
-      &-icon {
-        width: 36px;
-        height: 36px;
-        .margin(13px, r);
-      }
-      &-disabled {
-        .background-image('//net.huanmusic.com/weapp/bt_put_bottom_close_und.png');
-        color: #7C7C7C;
-      }
-      &-active {
-        .background-image('//net.huanmusic.com/weapp/bt_put_bottom_close_pitch.png');
-      }
-    }
     &-disabled {
-      .background-image('//net.huanmusic.com/weapp/bt_bottom_close_unselected.png');
+      background: rgba(204, 204, 204, 1);
       color: #666666;
     }
     &-active {
-      .background-image('//net.huanmusic.com/weapp/bt_bottom_close_pitch.png');
+      // .background-image("//net.huanmusic.com/weapp/bt_bottom_close_pitch.png");
+      background: @theme-color;
     }
   }
   &-suspension {
@@ -100,9 +69,9 @@
     }
   }
   &-left {
-    .flex(center, space-between);
+    .flex(center, flex-start, row);
     height: 100%;
-    .padding(170px, l);
+    .padding(30px, l);
     &-purchase {
       .padding(60px, l);
       .padding(15px, t);
@@ -112,12 +81,12 @@
         align-items: center;
       }
       &-text {
-        color: #8C8C8C;
+        color: #8c8c8c;
         font-size: 30px;
       }
       &-price {
         font-size: 40px;
-        color: #8C8C8C;
+        color: #8c8c8c;
         font-weight: bold;
       }
       &-active {
@@ -127,14 +96,14 @@
     &-price {
       font-size: 40px;
       font-weight: bold;
-      .margin(20px, r);
+      .margin(23px, l);
       &-active {
-        color: #ffffff;
+        color: @product-price-color;
         position: relative;
         z-index: 100;
       }
       &-disabled {
-        color: #8B8B8B;
+        color: #8b8b8b;
       }
     }
     &-suspension {
@@ -142,8 +111,8 @@
       .padding(45px, lr);
       border-radius: 20px;
       &-active {
-        border: 1px solid #A0A0A0;
-        color: #A0A0A0;
+        border: 1px solid #a0a0a0;
+        color: #a0a0a0;
         font-size: 26px;
       }
       &-disabled {
@@ -162,9 +131,6 @@
     }
   }
   &-icon {
-    position: absolute;
-    left: 30px;
-    bottom: 30px;
     &-image {
       width: @cart-icon-size;
       height: @cart-icon-size;
