--- a/src/pages/index/component/index.less
+++ b/src/pages/index/component/index.less
@@ -263,6 +263,14 @@
         font-weight: bold;
         color: rgba(51, 51, 51, 1);
       }
+
+      &-stant {
+        font-size: 20px;
+        line-height: 20px;
+        color: rgba(153, 153, 153, 1);
+        .clamp;
+        .margin(26px, t);
+      }
     }
   }
 
