--- a/src/component/product/product.less
+++ b/src/component/product/product.less
@@ -218,6 +218,10 @@
     &-text {
       .item-text;
       padding-top: 5px;
+      display: -webkit-box !important;
+      -webkit-line-clamp: 1 !important;
+      overflow: hidden !important;
+      -webkit-box-orient: vertical;
     }
   }
 
@@ -228,6 +232,10 @@
     &-text {
       .item-text;
       margin-top: 2px;
+      display: -webkit-box !important;
+      -webkit-line-clamp: 1 !important;
+      overflow: hidden !important;
+      -webkit-box-orient: vertical;
     }
   }
 
@@ -355,7 +363,7 @@
       background-color: transparent;
       border: #2A86FC solid 2px;
       color: #2A86FC;
-      margin-right: 30px;
+      margin-right: 15px;
       font-weight: normal;
     }
 
