--- a/src/pages/cart/index.less
+++ b/src/pages/cart/index.less
@@ -20,6 +20,19 @@
     font-size: 26px;
     color: rgba(51, 51, 51, 1);
     .flex(center, flex-start, row);
+    &-toHome {
+      font-size:26px;
+      position: absolute;
+      right: 0px;
+      margin-right: 30px;
+      &-img {
+        width: 13px;
+        height: 24px;
+        margin-left: 12px;
+        position: relative;
+        top: 2px;
+      }
+    }
   }
   &-sec {
     border-bottom: 20px solid;
